productsAPI/loadBalancer/envoy.yaml
overload_manager:
  refresh_interval: 0.25s
  resource_monitors:
  - name: "envoy.resource_monitors.fixed_heap"
    typed_config:
      "@type": type.googleapis.com/envoy.extensions.resource_monitors.fixed_heap.v3.FixedHeapConfig
      # TODO: Tune for your system.
      max_heap_size_bytes: 2147483648  # 2 GiB
  actions:
  - name: "envoy.overload_actions.shrink_heap"
    triggers:
    - name: "envoy.resource_monitors.fixed_heap"
      threshold:
        value: 0.8
  # - name: "envoy.overload_actions.stop_accepting_requests"
  #   triggers:
  #   - name: "envoy.resource_monitors.fixed_heap"
  #     threshold:
  #       value: 0.98

admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9090

static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    listener_filters:
    - name: "envoy.filters.listener.tls_inspector"
    # Uncomment if Envoy is behind a load balancer that exposes client IP address using the PROXY protocol.
    # - name: envoy.filters.listener.proxy_protocol
    #   typed_config:
    #     "@type": type.googleapis.com/envoy.extensions.filters.listener.proxy_protocol.v3.ProxyProtocol
    per_connection_buffer_limit_bytes: 32768  # 32 KiB
    filter_chains:
      filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          use_remote_address: true
          normalize_path: true
          merge_slashes: true
          path_with_escaped_slashes_action: UNESCAPE_AND_REDIRECT
          common_http_protocol_options:
            idle_timeout: 3600s  # 1 hour
            # headers_with_underscores_action: REJECT_REQUEST
          http2_protocol_options:
            max_concurrent_streams: 100
            initial_stream_window_size: 65536  # 64 KiB
            initial_connection_window_size: 1048576  # 1 MiB
          stream_idle_timeout: 300s  # 5 mins, must be disabled for long-lived and streaming requests
          request_timeout: 300s  # 5 mins, must be disabled for long-lived and streaming requests
          route_config:
            virtual_hosts:
            - name: default
              domains: ["*"]
              routes:
              - match: {prefix: "/"}
                route:
                  cluster: service_foo
                  idle_timeout: 15s  # must be disabled for long-lived and streaming requests
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: service_foo
    lb_policy: MAGLEV
    # protocol_selection: USE_DOWNSTREAM_PROTOCOL
    # per_connection_buffer_limit_bytes: 32768  # 32 KiB
    type: STATIC
    load_assignment:
      cluster_name: some_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                # address: 172.31.14.192
                address: 18.224.54.5
                port_value: 80
          load_balancing_weight: 1
        - endpoint:
            address:
              socket_address:
                address: 18.116.88.37
                # address: 172.31.3.207
                port_value: 80
          load_balancing_weight: 1
        - endpoint:
            address:
              socket_address:
                address: 18.117.186.102
                # address: 172.31.6.210
                port_value: 80
          load_balancing_weight: 1
        - endpoint:
            address:
              socket_address:
                address: 18.224.44.201
                # address: 172.31.13.221
                port_value: 80
          load_balancing_weight: 1
        - endpoint:
            address:
              socket_address:
                address: 3.21.98.214
                port_value: 80
          load_balancing_weight: 1
    # typed_extension_protocol_options:
    #   envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
    #     "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
    #     explicit_http_config:
    #       http2_protocol_options:
    #         initial_stream_window_size: 65536  # 64 KiB
    #         initial_connection_window_size: 1048576  # 1 MiB

layered_runtime:
  layers:
  - name: static_layer_0
    static_layer:
      envoy:
        resource_limits:
          listener:
            example_listener_name:
              connection_limit: 1000000
      overload:
        global_downstream_max_connections: 5000000
